templates/Element/Form/relations.scss
/* ... */
// related item (relate-item-twig)
.related-item-column {
    &.sorting {
        opacity: 0.2;
    }

    article {
        height: 100%;

        &.unselectable {
            pointer-events: none;
            opacity: .4;
        }

        header h1 {
            min-height: $font-size-lg * 2;
            padding-right: $gutter * .75;
            word-break: break-word;
            line-height: 1.25em;;
        }

        .modified, .other {
            display: none;
        }

        .priority {
            position: absolute;
            top: $gutter * .5;
            left: $gutter * .5;
            z-index: 2;
        }

        .thumbnail {
            position: relative;
            width: 100%;
            height: 0;
            padding-bottom: 63%; // 16 / 9 56%
            background-color: $gray-100;
            pointer-events: none;
            figure {
                @extend .full-size-absolute;
                font-size: 2.5rem; // icons
                img {
                    display: block;
                    object-fit: cover;
                    width: 100%;
                    height: 100%;
                }
            }
        }

    }

    &.removed {
        article {
            opacity: .2 !important;
        }
    }

    &.added {
        article {
            //box-shadow: 0 0 0 3px var(--box-shadow-color);
            .badge {
                padding: $gutter * .5;
                border: none;
                letter-spacing: 1px;
            }
        }
    }
    .ribbon {
        position: absolute;
        top: $gutter * .5;
        right: -$gutter * .5;
        z-index: 2;
        display: block;
        color: #fff;
        background-color: #000;
        font-size: $font-size-sssm;
        font-weight: $font-weight-black;
        text-transform: uppercase;
        padding: $gutter * 0.25 $gutter $gutter * 0.25 $gutter;
    }
    .in-data-list {
        background-color: transparent !important;
        font-size: 0.5rem;
    }
}

// in panel
%relation-panel-common {
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow: auto;

    > * {
        display: flex;
        flex-direction: column;
    }

    footer {
        position: sticky;
        background-color: $gray-800;
        bottom: 0;
        left: 0;
        display: flex;
    }

    form[disabled] {
        opacity: 0.7;
        pointer-events: none;
        cursor: default;
    }

    header[disabled], a[disabled], a[disabled]:hover {
        pointer-events: none;
        cursor: default;
    }
}


.main-panel-container .edit-relation {
    @extend %relation-panel-common;
    label {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        margin: 0;
        >* {
            margin-top: .125rem;
        }
    }

    #{$text-inputs}, select {
        &:not(.input-narrow) {
            min-width: 12rem;
        }
    }
}
/* ... */

